<resources>
    <string name="app_name">ChronometerTest</string>
    <string name="timer_all_zereos">00</string>
    <string name="open_activity_2">Open Activity 2</string>
    <string name="done">done!</string>
    <string name="start_button_text">Start</string>
    <string name="pause_button_text">Pause</string>
    <string name="reset_button_text">Reset</string>
    <string name="commit_button_text">Commit</string>
</resources>
